so simple theme integrated

--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 ---
-layout: default
+layout: page
 title: Meine Biketouren
 ---
 
 <div id="home">
-  <h1>Biketouren</h1>
   <ul class="posts">
     {% for post in site.posts %}
       <li><a href="{{ post.url }}">{{ post.title }}</a></li>
